# src/api/urls.py
@@ -9,6 +9,11 @@ urlpatterns = [
         views.UpdateCalendarView.as_view(),
         name="api_update_calendar",
     ),
+    re_path(
+        r"^history/(?P<media_type>[^/]+)/(?P<history_id>[^/]+)/?$",
+        views.MediaTypeHistoryDetailView.as_view(),
+        name="api_media_history_detail",
+    ),
     re_path(r"^lists/?$", views.ListsView.as_view(), name="api_lists"),
     re_path(
         r"^lists/(?P<list_id>\d+)/?$",
@@ -40,11 +45,6 @@ urlpatterns = [
         r"^media/(?P<media_type>[^/]+)/(?P<source>[^/]+)/(?P<media_id>\d+)/history/?$",
         views.MediaHistoryView.as_view(),
         name="api_media_history",
-    ),
-    re_path(
-        r"^media/(?P<media_type>[^/]+)/(?P<source>[^/]+)/(?P<media_id>\d+)/history/(?P<history_id>[^/]+)/?$",
-        views.MediaHistoryDetailView.as_view(),
-        name="api_media_history_detail",
     ),
     re_path(
         r"^media/(?P<media_type>[^/]+)/(?P<source>[^/]+)/(?P<media_id>\d+)/lists/?$",
